<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flo Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menuitem_help">Help</string>
    <string name="menuitem_about">About …</string>
    <string name="current_day">Current day</string>
    <string name="menuitem_list">History</string>
    <string name="menuitem_listdetails">History with details</string>
    <string name="menuitem_copy">Backup</string>
    <string name="menuitem_restore">Restore</string>
    <string name="menuitem_options">Preferences</string>
    <string name="menuitem_community">community</string>
    <string name="menuitem_chat">chat</string>
    <string name="menuitem_exit">Exit</string>
    <string name="main_calday_su">SU</string>
    <string name="main_calday_mo">MO</string>
    <string name="main_calday_tu">TU</string>
    <string name="main_calday_we">WE</string>
    <string name="main_calday_th">TH</string>
    <string name="main_calday_fr">FR</string>
    <string name="main_calday_sa">SA</string>
    <string name="main_calday_su_description">sunday</string>
    <string name="main_calday_mo_description">monday</string>
    <string name="main_calday_tu_description">tuesday</string>
    <string name="main_calday_we_description">wednesday</string>
    <string name="main_calday_th_description">thursday</string>
    <string name="main_calday_fr_description">friday</string>
    <string name="main_calday_sa_description">saturday</string>
    <string name="details_title">Details</string>
    <string name="list_title">List</string>
    <string name="list_details_title">List with details</string>
    <string name="about_title">About …</string>
    <string name="community_title">Community</string>
    <string name="help_title">Help</string>
    <string name="backup_title">Backup data</string>
    <string name="backup_text">Do you want to backup the current data?\nThis will replace the last backup!</string>
    <string name="backup_ok">OK</string>
    <string name="backup_cancel">Cancel</string>
    <string name="backup_finished">Backup done</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="restore_title">Restore data</string>
    <string name="restore_text">Do you want to restore the last backup?\nThis will replace the current data!</string>
    <string name="restore_ok">OK</string>
    <string name="restore_cancel">Cancel</string>
    <string name="restore_finished">Restore done</string>
    <string name="restore_failed">Restore failed!</string>
    <string name="permissions_needed">To create or restore backups, Periodical needs permission to access file storage.</string>
    <string name="permissions_needed_ok">OK</string>
    <string name="event_periodstart">Period has started</string>
    <string name="event_periodlength">Last cycle had %s days</string>
    <string name="event_ignored">Cycle length ignored</string>
    <string name="event_periodfirst">First entry</string>
    <string name="calendaraction_title">Edit calendar entry</string>
    <string name="calendaraction_add">Mark this day as \"Period\"?</string>
    <string name="calendaraction_remove">Remove the \"Period\" mark for this day?</string>
    <string name="calendaraction_removeperiod">Remove this Period?</string>
    <string name="calendaraction_ok">Yes</string>
    <string name="calendaraction_cancel">No</string>
    <string name="calendaraction_details">Edit details</string>
    <string name="options_title">Preferences</string>
    <string name="pref_periodlength">Default length of period (days)</string>
    <string name="invalid_period_length">The default period length must be between 1 and 14!</string>
    <string name="pref_luteallength">Luteal phase length (days)</string>
    <string name="invalid_luteal_length">The luteal length must be at least 1!</string>
    <string name="pref_startofweek">Start of the week</string>
    <string name="pref_maximum_cycle_length">Maximum cycle length</string>
    <string name="invalid_maximum_cycle_length">The maximum cycle length must be at least 60!</string>
    <string name="pref_direct_details">Go directly to the details</string>
    <string name="pref_show_cycle">Show day of cycle</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="label_average_cycle">average cycle</string>
    <string name="label_shortest_cycle">shortest cycle</string>
    <string name="label_longest_cycle">longest cycle</string>
    <string name="label_infertile">infertile</string>
    <string name="label_fertile">fertile</string>
    <string name="label_period_started">period has started</string>
    <string name="label_period">period</string>
    <string name="label_period_predicted">period predicted</string>
    <string name="label_ovulation">ovulation</string>
    <string name="asset_about">en/about.html</string>
    <string name="asset_help">en/help.html</string>
    <string name="label_details_period">Period</string>
    <string name="label_details_yes">Yes</string>
    <string name="label_details_no">No</string>
    <string name="label_details_intensity">Intensity</string>
    <string name="label_details_intensity1">1</string>
    <string name="label_details_intensity2">2</string>
    <string name="label_details_intensity3">3</string>
    <string name="label_details_intensity4">4 (strong)</string>
    <string name="label_details_notes">Notes</string>
    <string name="label_details_events">Events</string>
    <string name="label_details_symptoms">Symptoms</string>
    <string name="label_details_ev1" tools:keep="@string/label_details_ev1">Intercourse</string>
    <string name="label_details_ev2" tools:keep="@string/label_details_ev2">Cramps</string>
    <string name="label_details_ev3" tools:keep="@string/label_details_ev3">Back pain</string>
    <string name="label_details_ev4" tools:keep="@string/label_details_ev4">Middle pain left</string>
    <string name="label_details_ev5" tools:keep="@string/label_details_ev5">Middle pain right</string>
    <string name="label_details_ev6" tools:keep="@string/label_details_ev6">Breast pain/dragging pain</string>
    <string name="label_details_ev7" tools:keep="@string/label_details_ev7">Thrush/candida</string>
    <string name="label_details_ev8" tools:keep="@string/label_details_ev8">Discharge</string>
    <string name="label_details_ev9" tools:keep="@string/label_details_ev9">Intense bleeding</string>
    <string name="label_details_ev10" tools:keep="@string/label_details_ev10">Temperature fluctuations</string>
    <string name="label_details_ev11" tools:keep="@string/label_details_ev11">Pimples</string>
    <string name="label_details_ev12" tools:keep="@string/label_details_ev12">Bloating</string>
    <string name="label_details_ev13" tools:keep="@string/label_details_ev13">Fainting</string>
    <string name="label_details_ev14" tools:keep="@string/label_details_ev14">Grumpiness</string>
    <string name="label_details_ev15" tools:keep="@string/label_details_ev15">Nausea</string>
    <string name="label_details_ev16" tools:keep="@string/label_details_ev16">Cravings</string>
    <string name="label_details_ev17" tools:keep="@string/label_details_ev17">Headache/migraine</string>
    <string name="label_details_ev18" tools:keep="@string/label_details_ev18">Contraceptive pill</string>
    <string name="label_details_ev19" tools:keep="@string/label_details_ev19">Spotting</string>
    <string name="label_details_ev20" tools:keep="@string/label_details_ev20">Tired</string>
    <string name="label_details_ev21" tools:keep="@string/label_details_ev21">Energized</string>
    <string name="label_period_day">Period, day %d</string>
    <string name="title_activity_boarding_set_up">boardingSetUp</string>
    <string-array name="list_startofweek">
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="values_startofweek">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
