<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/menuitem_list"
        />
    <item
        android:id="@+id/listdetails"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/menuitem_listdetails"
        />
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/menuitem_copy"
        android:visible="false"
        />
    <item
        android:id="@+id/restore"
        android:icon="@drawable/ic_settings_backup_restore_black_24dp"
        android:title="@string/menuitem_restore"
        android:visible="false"
        />
    <item
        android:id="@+id/community"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/menuitem_community"
        />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/menuitem_chat"
        />
    <item
        android:id="@+id/options"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menuitem_options"
        />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/menuitem_help"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/menuitem_about"
        />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/menuitem_exit"
        />
</menu>
